--- a/app/views/user_mailer/signup_email.html.erb
+++ b/app/views/user_mailer/signup_email.html.erb
@@ -65,7 +65,7 @@
                           </td>
                           <td width="20"></td>
                           <td width="80">
-                            <a href="https://twitter.com/share?url=<%= CGI::escape(root_url) %>?ref=<%= CGI::escape(@user.referral_code) %>&text=<%= CGI::escape(twitter_message) %>" target="_blank"></a>
+                            <a href="https://twitter.com/share?url=<%= CGI::escape(root_url) %>?ref=<%= CGI::escape(@user.referral_code) %>&text=<%= CGI::escape(@twitter_message) %>" target="_blank"></a>
                               <img src="<%= Rails.application.config.action_mailer.default_url_options %>/assets/twitter.jpg" alt="Share on Twitter" style="display: block; margin: 0; padding: 0; border: 0;">
                             </a>
                           </td>
